# qrmax

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/server/: mod.rs  server.rs
src/tools/: consts.rs  mod.rs  qr.rs
