[package]
name = "qrmax"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Prototype Model Context Protocol (MCP) project that allows QR code generation and decoding. QR Codes uploaded to catbox.moe."
license = "MIT"
repository = "https://github.com/nystar1/qrmax"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "qr", "qrcode", "decoder", "uploader"]

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
qrcode = "0.14.1"
image = "0.25.6"
base64 = "0.22"
url = "2.5.0"
quircs = "0.10.2"

[profile.release]
opt-level = 3
rpath = false
lto = "fat"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
